// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecipeDetailsImageGallery With Image 1`] = `
<View
  style={
    Array [
      Object {
        "height": 300,
        "marginBottom": 12,
        "marginLeft": 12,
        "marginRight": 12,
        "marginTop": 12,
      },
    ]
  }
>
  <Image
    source={
      Object {
        "uri": "test-uri",
      }
    }
    style={
      Array [
        Object {
          "backgroundColor": "#68a0cf",
          "borderColor": "#fff",
          "borderRadius": 10,
          "borderWidth": 1,
          "height": "100%",
          "paddingBottom": 20,
          "paddingTop": 20,
          "width": "100%",
        },
      ]
    }
  />
</View>
`;

exports[`RecipeDetailsImageGallery default image 1`] = `
<View
  style={
    Array [
      Object {
        "height": 300,
        "marginBottom": 12,
        "marginLeft": 12,
        "marginRight": 12,
        "marginTop": 12,
      },
    ]
  }
>
  <Image
    source={
      Object {
        "testUri": "../../../resources/platzhalter.png",
      }
    }
    style={
      Array [
        Object {
          "backgroundColor": "#68a0cf",
          "borderColor": "#fff",
          "borderRadius": 10,
          "borderWidth": 1,
          "height": "100%",
          "paddingBottom": 20,
          "paddingTop": 20,
          "width": "100%",
        },
      ]
    }
  />
</View>
`;
